[gd_scene load_steps=9 format=3 uid="uid://xcwcga3on6gp"]

[ext_resource type="Script" uid="uid://btrvhxpx86k87" path="res://addons/newgrounds/examples/newgrounds_debug.gd" id="1_e2xbo"]
[ext_resource type="Script" uid="uid://ixpyi3twpto4" path="res://addons/newgrounds/examples/ExampleSaveData.gd" id="2_5kj3a"]
[ext_resource type="PackedScene" uid="uid://b2rnbblsa42pm" path="res://addons/newgrounds/examples/example_scoreboard.tscn" id="3_gp5e1"]
[ext_resource type="PackedScene" uid="uid://dgf2xfu4r0mtd" path="res://addons/newgrounds/newgrounds_user_avatar.tscn" id="3_vopvl"]
[ext_resource type="PackedScene" uid="uid://cafxm6acw5lcl" path="res://addons/newgrounds/examples/example_medal_list.tscn" id="4_lqp0p"]
[ext_resource type="Script" uid="uid://2ueiminarn3y" path="res://addons/newgrounds/newgrounds_session_watcher.gd" id="6_i37bs"]
[ext_resource type="Script" uid="uid://dxu5nxiql0qyj" path="res://addons/newgrounds/newgrounds_medal_unlocker.gd" id="7_tu0rn"]
[ext_resource type="PackedScene" uid="uid://yjybvr6kfrvo" path="res://addons/newgrounds/examples/example_login_screen.tscn" id="8_jot3l"]

[node name="NewgroundsDebugExamples" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e2xbo")

[node name="ExampleSaveData" type="Control" parent="." groups=["CloudSave"]]
anchors_preset = 0
offset_left = 34.0
offset_top = 448.0
offset_right = 34.0
offset_bottom = 448.0
script = ExtResource("2_5kj3a")

[node name="TextEdit" type="TextEdit" parent="ExampleSaveData"]
layout_mode = 0
offset_left = -4.0
offset_top = -7.0
offset_right = 269.0
offset_bottom = 172.0
placeholder_text = "Example save data"

[node name="Log In" type="Button" parent="."]
layout_mode = 1
offset_left = 30.0
offset_top = 25.0
offset_right = 170.0
offset_bottom = 56.0
text = "Log in"

[node name="Check Session" type="Button" parent="."]
layout_mode = 1
offset_left = 30.0
offset_top = 64.0
offset_right = 170.0
offset_bottom = 95.0
text = "Check session"

[node name="List Medals" type="Button" parent="."]
layout_mode = 1
offset_left = 30.0
offset_top = 103.0
offset_right = 170.0
offset_bottom = 134.0
text = "List Medals"

[node name="List Medals2" type="Button" parent="."]
layout_mode = 1
offset_left = 178.0
offset_top = 103.0
offset_right = 318.0
offset_bottom = 134.0
text = "Unlock Medal"

[node name="List Scoreboards" type="Button" parent="."]
layout_mode = 1
offset_left = 30.0
offset_top = 142.0
offset_right = 170.0
offset_bottom = 173.0
text = "List Scoreboards"

[node name="Submit Score" type="Button" parent="."]
layout_mode = 1
offset_left = 30.0
offset_top = 181.0
offset_right = 170.0
offset_bottom = 212.0
text = "Post Score"

[node name="Load Saveslots" type="Button" parent="."]
layout_mode = 1
offset_left = 30.0
offset_top = 282.0
offset_right = 170.0
offset_bottom = 313.0
text = "Load Saveslots"

[node name="Save Slot" type="Button" parent="."]
layout_mode = 1
offset_left = 30.0
offset_top = 361.0
offset_right = 170.0
offset_bottom = 392.0
text = "Save Slot 1 Data"

[node name="Get Slot Data" type="Button" parent="."]
layout_mode = 1
offset_left = 30.0
offset_top = 321.0
offset_right = 170.0
offset_bottom = 352.0
text = "Load Slot 1 Data
"

[node name="Clear Slot" type="Button" parent="."]
layout_mode = 1
offset_left = 30.0
offset_top = 401.0
offset_right = 170.0
offset_bottom = 432.0
text = "Clear Slot 1 Data"

[node name="Profile" type="Button" parent="."]
layout_mode = 0
offset_left = 191.0
offset_top = 25.0
offset_right = 381.0
offset_bottom = 85.0
tooltip_text = "Open Profile URL"
mouse_default_cursor_shape = 2
flat = true

[node name="NewgroundsUserAvatar" parent="Profile" instance=ExtResource("3_vopvl")]
layout_mode = 1
anchors_preset = 9
anchor_right = 0.0
anchor_bottom = 1.0
offset_right = 60.0
offset_bottom = 0.0
grow_horizontal = 1

[node name="UserName" type="Label" parent="Profile"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -122.0
offset_right = -12.0
offset_bottom = -30.0
grow_horizontal = 0
grow_vertical = 2
text = "asdf"
vertical_alignment = 1

[node name="UserMedalScore" type="Label" parent="Profile"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -122.0
offset_top = 30.0
offset_right = -12.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.905882, 0.670588, 0.145098, 1)
text = "19 033 P"
vertical_alignment = 1

[node name="ExampleScoreboard" parent="." instance=ExtResource("3_gp5e1")]
layout_mode = 0
offset_left = 422.0
offset_top = 57.0
offset_right = 688.0
offset_bottom = 422.0

[node name="ExampleMedalList" parent="." instance=ExtResource("4_lqp0p")]
offset_left = 885.0
offset_top = 40.0
offset_right = 1111.0
offset_bottom = 405.0

[node name="NewgroundsSessionWatcher" type="Node" parent="."]
script = ExtResource("6_i37bs")

[node name="NewgroundsMedalUnlocker" type="Node" parent="."]
script = ExtResource("7_tu0rn")

[node name="ExampleSignInForm" parent="." instance=ExtResource("8_jot3l")]
layout_mode = 1

[connection signal="text_changed" from="ExampleSaveData/TextEdit" to="ExampleSaveData" method="_on_text_edit_text_changed"]
[connection signal="pressed" from="Log In" to="." method="_on_log_in_pressed"]
[connection signal="pressed" from="Check Session" to="." method="_on_check_session_pressed"]
[connection signal="pressed" from="List Medals" to="." method="_on_check_session_2_pressed"]
[connection signal="pressed" from="List Medals2" to="." method="_on_list_medals_2_pressed"]
[connection signal="pressed" from="List Scoreboards" to="." method="_on_list_scoreboards_pressed"]
[connection signal="pressed" from="Submit Score" to="." method="_on_submit_score_pressed"]
[connection signal="pressed" from="Load Saveslots" to="." method="_on_load_saveslots_pressed"]
[connection signal="pressed" from="Save Slot" to="." method="_on_save_slot_pressed"]
[connection signal="pressed" from="Get Slot Data" to="." method="_on_get_slot_data_pressed"]
[connection signal="pressed" from="Clear Slot" to="." method="_on_clear_slot_pressed"]
[connection signal="pressed" from="Profile" to="." method="_on_profile_pressed"]
[connection signal="on_sign_in_skipped" from="ExampleSignInForm" to="." method="_on_example_sign_in_form_on_sign_in_skipped"]
[connection signal="on_signed_in" from="ExampleSignInForm" to="." method="_on_example_sign_in_form_on_signed_in"]
